--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,16 +1,20 @@
 name: CI_DEV
 on:
   push
-    branches: dev
+    branches: [ dev ]
+
 jobs:
-  Test:
+  build:
+
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "12.x"
+          cache: 'npm'
       - name: Running Test
-        run: yarn run test.js
+        run: npm run test.js
