--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
-  "name": "git-ci",
-  "version": "1.0.0",
-  "description": "",
-  "main": "test.js",
+  "name": "static",
+  "version": "0.0.0",
+  "private": true,
   "scripts": {
-    "test": "node run test.js"
+    "start": "node ./bin/www"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/nsefelibata/test.git"
+  "dependencies": {
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "jade": "~1.11.0",
+    "morgan": "~1.9.1"
   },
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/nsefelibata/test/issues"
-  },
-  "homepage": "https://github.com/nsefelibata/test#readme"
+  "devDependencies": {
+    "nodemon": "^2.0.16"
+  }
 }
