--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
 {
-  "name": "static",
-  "version": "0.0.0",
+  "name": "vue-tsx",
+  "homepage": "https://nsefelibata.github.io/test",
   "private": true,
+  "version": "0.0.0",
   "scripts": {
-    "start": "node ./bin/www"
+    "dev": "vite --port=8090",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
-    "express": "~4.16.1",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1"
+    "axios": "^0.27.2",
+    "element-plus": "^2.2.0",
+    "vue": "^3.2.25",
+    "vue-router": "^4.0.14",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.16"
+    "@types/node": "^17.0.25",
+    "@vitejs/plugin-vue": "^2.3.1",
+    "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "sass": "^1.51.0",
+    "vite": "^2.9.5",
+    "vite-plugin-components": "^0.13.3",
+    "vite-plugin-style-import": "^2.0.0"
   }
 }
