--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@vitejs/plugin-vue-jsx": "^1.3.10",
     "sass": "^1.51.0",
     "vite": "^2.9.5",
+    "consola": "^2.15.2",
     "vite-plugin-components": "^0.13.3",
     "vite-plugin-style-import": "^2.0.0"
   }
