--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,6 +27,6 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with: 
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          super_secret: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages
           folder: build # The folder the action should deploy.
