--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches: [ dev ]
 
+permissions: 
+  contents: write
+
 jobs:
   build:
 
@@ -27,6 +30,5 @@ jobs:
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with: 
-          super_secret: ${{ secrets.ACCESS_TOKEN }}
-          BRANCH: gh-pages
+          BRANCH: dev
           folder: build # The folder the action should deploy.
