--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,4 +31,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@4.1.1
         with: 
           BRANCH: dev
-          folder: dist # The folder the action should deploy.
+          folder: / # The folder the action should deploy.
