--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
     "@types/node": "^17.0.25",
     "@vitejs/plugin-vue": "^2.3.1",
     "@vitejs/plugin-vue-jsx": "^1.3.10",
+    "consola": "^2.15.2",
+    "rollup-plugin-copy": "^3.4.0",
     "sass": "^1.51.0",
     "vite": "^2.9.5",
-    "consola": "^2.15.2",
     "vite-plugin-components": "^0.13.3",
     "vite-plugin-style-import": "^2.0.0"
   }
